fix(front-end): fix number card spacing

--- a/ui_web/src/pages/home/home.scss
+++ b/ui_web/src/pages/home/home.scss
@@ -35,8 +35,9 @@ section.ant-layout.layout-content .ant-layout-content.content-ant {
 }
 .number h3 {
   font-weight: 700;
-  margin-bottom: 10px !important;
   font-size: 30px;
+  margin-top: 22px;
+  margin-bottom: 0;
 }
 
 .number h3 small {
